<resources>
    <string name="app_name">Ribbit</string>


    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="sign_up_error_message">Please make sure you enter a username, password and email address!</string>
    <string name="sign_up_error_title">Opps!</string>
    <string name="login_error_message">Please make sure you enter an username and a password</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages</string>
    <string name="empty_friends_label">Add friends to begin</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We are sorry!</string>
    <string name="loading_current_friends_label">Loading list of current friends...</string>
    <string name="loading_list_friends_label">Loading list of friends...</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_accessing_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="error_failed_to_create_directory">Failed to create directory</string>
    <string name="general_error">The action was not finish successfully.</string>
    <string name="warning_video_size_limit">The selected video must be less than 10 MB</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected File is too large. Please select a new File</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_reciepts_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with file selected. Please select a new one</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="sending_message">Sending Message...</string>
    <string name="loading_inbox_messages">Loading messages...</string>
    <string name="content_desc_background">Ribbit Frog Background Image</string>
    <string name="subtitle">A Treehouse Project</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="push_message">"You have a new message from %s!"</string>


</resources>
